style header and showcase

--- a/index.html
+++ b/index.html
@@ -8,7 +8,24 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-
+        <header>
+            <nav>
+                <ul>
+                    <li><span class="logo">EASY EATS</span></li>
+                    <div class="nav-group">
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./menu.html">Menu</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
+                    </div>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <div class="showcase">
+                <span class="logo-showcase">EASY EATS</span>
+                <button class="menu-btn">LOOK AT OUR MENU</button>
+            </div>
+        </main>
         <script src="script.js"></script>
     </body>
 </html>
