make navbar responsive

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Pizza</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet"> 
@@ -18,6 +18,7 @@
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./menu.html">Menu</a></li>
                         <li><a href="./contact.html">Contact</a></li>
+                        <li><i class="fas fa-bars fa-lg" id="hamburger"></i></li>
                     </div>
                 </ul>
             </nav>
@@ -31,7 +32,7 @@
         </main>
         <section class="about-section">
             <div class="about-description">
-                <h2>ABOUT US</h2>
+                <h2>EST 1995</h2>
                 <p>
                     Conveniently located in downtown Liberal, Kansas, EasyEats was opened in 1995 after Chris Pirlo emigrated from Italy.
                 </p>
@@ -40,15 +41,15 @@
                     In his piping hot retro oven, Dom has each mouthwatering pie ready to be devoured in just minutes.
                 </p>
             </div>
-            <img src="./images/photo-1542203252-9e122bce242a.webp" alt="">
+            <div class="about-photo">
+                <img src="./images/photo-1542203252-9e122bce242a.webp" alt="">
+            </div>
         </section>
-        <!-- turn this into a private envents sections insteasd -->
-        <!-- <section class="hours-section">
-            <div class="hours-description">
-                <h2>HOURS</h2>
-                <p>MONDAY - FRIDAY: 11:00am - 10:00pm</p>
-                <p>SATURDAY - SUNDAY: 10:00am - 11:30pm</p>
-            </div> -->
+        <section class="private-events">
+            <div class="private-events-img">
+                <h2>PRIVATE EVENTS</h2>
+                <div class="book-event">BOOK YOUR PARTY HERE</div>
+            </div>
         </section>
         <footer>
             <hr>
